[package]
edition = "2024"
name = "openinfer-comm-fabric-debug"
license = "Apache-2.0"
publish = false

[features]
# When `hw-rdma` is off (default), this binary compiles as a stub that just
# prints a feature-disabled message at runtime. When on, the full fabric debug
# tool is built.
default = []
hw-rdma = ["fabric-lib/hw-rdma", "cuda-lib/hw-cuda"]

[dependencies]
fabric-lib = { path = "../openinfer-comm-fabric-lib", package = "openinfer-comm-fabric-lib" }
cuda-lib = { path = "../openinfer-comm-cuda-lib", package = "openinfer-comm-cuda-lib" }
logging-lib = { path = "../openinfer-comm-logging-lib", package = "openinfer-comm-logging-lib", features = [] }

anyhow = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
