[package]
edition = "2024"
links = "ibverbs"
name = "openinfer-comm-libibverbs-sys"
license = "Apache-2.0"
publish = false

[features]
# Internal sys-crate feature. See `openinfer-comm-cuda-sys/Cargo.toml` for the rationale.
default = []
system-bindings = []

[build-dependencies]
build-utils = { path = "../openinfer-comm-build-utils", package = "openinfer-comm-build-utils" }

bindgen = { workspace = true }
cc = { workspace = true }
