[package]
edition = "2024"
name = "openinfer-comm-p2p-all-to-all"
publish = false

[features]
# Hardware backend feature: the all-to-all path needs both CUDA (kernels +
# torch tensor interop) and RDMA Verbs (cross-rank transport). The single
# top-level `hw-rdma` activates both subsystems.
default = []
hw-rdma = [
    "dep:nvtx",
    "fabric-lib/hw-rdma",
    "cuda-lib/hw-cuda",
    "a2a-kernels/hw-cuda",
]

[dependencies]
a2a-kernels = { path = "../openinfer-comm-a2a-kernels", package = "openinfer-comm-a2a-kernels" }
cuda-lib = { path = "../openinfer-comm-cuda-lib", package = "openinfer-comm-cuda-lib" }
fabric-lib = { path = "../openinfer-comm-fabric-lib", package = "openinfer-comm-fabric-lib" }
thread-lib = { path = "../openinfer-comm-thread-lib", package = "openinfer-comm-thread-lib" }

anyhow = { workspace = true }
# nvtx is NVIDIA's profiling marker library and is only referenced from the
# CUDA + RDMA worker module, which is itself gated by `hw-rdma`. Keep it
# optional so a default-off build never pulls in any NVIDIA-related symbol.
nvtx = { workspace = true, optional = true }
oneshot = { workspace = true }
tracing = { workspace = true }
