[package]
edition = "2024"
name = "openinfer-comm-python-ext"
license = "Apache-2.0"
publish = false

[lib]
name = "pplx_garden_python_ext"
crate-type = ["cdylib"]

[features]
# Hardware backend feature: when on, the full Python API surface is built
# (CudaMem, fabric, p2p-all-to-all). When off (default), the cdylib is a
# near-empty PyO3 module with a `HW_RDMA_ENABLED` attribute.
default = []
hw-rdma = [
    "p2p-all-to-all/hw-rdma",
    "fabric-lib/hw-rdma",
    "cuda-lib/hw-cuda",
    "torch-lib/hw-cuda",
]

[dependencies]
cuda-lib = { path = "../openinfer-comm-cuda-lib", package = "openinfer-comm-cuda-lib" }
fabric-lib = { path = "../openinfer-comm-fabric-lib", package = "openinfer-comm-fabric-lib" }
logging-lib = { path = "../openinfer-comm-logging-lib", package = "openinfer-comm-logging-lib" }
torch-lib = { path = "../openinfer-comm-torch-lib", package = "openinfer-comm-torch-lib" }
p2p-all-to-all = { path = "../openinfer-comm-p2p-all-to-all", package = "openinfer-comm-p2p-all-to-all" }

bincode = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py310"] }
serde = { workspace = true }
tracing = { workspace = true }
